<resources>
    <string name="app_name">sdkApp</string>
    <string name="title_activity_fp">FpActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_clear">clear</string>
    <string name="settings">settings</string>
    <string name="activity_title_lcd">CustomerDisplaySDKDemo</string>
    <string name="version">Version</string>
    <string name="get_version">Get Version</string>
    <string name="physical_card_number">Physical Card Number</string>
    <string name="find_card">Find Card</string>
    <string name="auto_find_card">Auto Find Card</string>
    <string name="sector">Sector</string>
    <string name="key_default">ffffffffffff</string>
    <string name="block">Block</string>
    <string name="key">key</string>
    <string name="block_default">0</string>
    <string name="sector_default">0</string>
    <string name="check_key">Check Key</string>
    <string name="new_key">New Key</string>
    <string name="modify_key">Modify Key</string>
    <string name="read_card">read card</string>
    <string name="write_card">write card</string>
    <string name="data">Data</string>
    <string name="init_e_wallet">init</string>
    <string name="recharge_e_wallet">recharge</string>
    <string name="reduce_e_wallet">reduce</string>
    <string name="read_e_wallet">read</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="select_mf_file">Select MF File</string>
    <string name="select_file">Select File</string>
    <string name="file_identifier">File Identifier</string>
    <string name="file_name">File Name</string>
    <string name="get_random_number">Get Random Number</string>
    <string name="des_encrypt">DES Encrypt</string>
    <string name="random_number_length">Random Number Length</string>
    <string name="external_authenticate">External Authenticate</string>
    <string name="erase_df">Erase DF</string>
    <string name="create_mf_key_file">Create MF Key File</string>
    <string name="write_external_authenticate_key">write external authenticate key</string>
    <string name="write_password_key">write password key</string>
    <string name="check_card">check card</string>
    <string name="power_up">power up</string>
    <string name="power_down">power down</string>
    <string name="apdu_data">apdu data</string>
    <string name="confirm">confirm</string>
    <string name="path">serial port path</string>
    <string name="activity_title_mifare">MifareSDKDemo</string>
    <string name="activity_title_14443b">14443BSDKDemo</string>
    <string name="activity_title_fm1208">ContactlessCpuSDKDemo</string>
    <string name="activity_title_sle4442">SLE4442SDKDemo</string>
    <string name="activity_title_contact_cpu">ContactCpuSDKDemo</string>
    <string name="check_paper">Check Paper</string>
    <string name="print_text">print text</string>
    <string name="print_barcode">Print Barcode</string>
    <string name="print_qr_code">Print Qr Code</string>
    <string name="print_image">Print Image</string>
    <string name="feed_paper">Feed Paper</string>
    <string name="init">Init</string>
    <string name="set_align">Set Align</string>
    <string name="activity_title_print">PrintSDKDemo</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="pref_title_baudrate">Baud rate</string>
    <string name="pref_title_devices">Devices</string>
    <string name="pref_header_barcode">Barcode</string>
    <string name="pref_header_card_psam">PSAM</string>
    <string name="pref_header_card_contact_cpu">Contact-Cpu</string>
    <string name="pref_header_fingerprint_biomini2">biomini2</string>
    <string name="pref_header_nfc">Nfc</string>
    <string name="key_device_14443b">key_device_14443b</string>
    <string name="key_baudrate_14443b">key_baudrate_14443b</string>
    <string name="key_enable_card_14443b">key_enable_card_14443b</string>
</resources>