<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_enable_card_14443b"
        android:title="Enable"/>
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/device_name_default"
        android:entryValues="@array/device_value_default"
        android:key="@string/key_device_14443b"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_devices"/>
    <ListPreference
        android:defaultValue="115200"
        android:entries="@array/baudrates_name"
        android:entryValues="@array/baudrates_value"
        android:key="@string/key_baudrate_14443b"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_baudrate"/>

</PreferenceScreen>
